ui/src/index.css
/* ... */
/* Styles for digital portfolio components */
.large-menu {
  margin: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 1rem;
  flex-direction: row;
}

.hamburger-button {
  display: none;
}

.dropdown-menu {
  display: none;
}

.large-menu-home-button {
  font-size: 22px;
  font-weight: bold;
  text-decoration: none;
  margin: 0 0 0 20px;
}

.large-menu-project-button-group {
  display: flex;
  margin: 0;
  gap: 16px;
  text-align: center;
  font-size: 0.7em;
}

.large-menu-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  width: 90px;
  padding: 5px;
  margin: 1px;
}

.large-menu-button-short {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-decoration: none;
  width: 40px;
  padding: 5px;
  margin: 1px;
  justify-content: center;
  color: var(--dark-blue);
}

.large-menu-button:hover, .large-menu-button-short:hover {
  border: 1px solid var(--dark-blue);
  margin: 0;
}

.large-menu-icon {
  width: 70px;
  margin-bottom: 0.25rem;
  height: 70px;
}

.project-icon-row {
  display: flex;
  margin: 0;
  gap: 4rem;
  text-align: center;
  font-size: 0.7em;
  width: 100%;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.about {
  background-color: var(--dark-blue);
  color: white;
}

.about-centered-row {
  padding: 20px 3em;
  max-width: 600px;
  margin: 0 auto;
}

/*
.reveal-from-left {
  opacity: 1;
  transform: translateX(-500px); /* start left */ /*
  transition: all 0.6s ease;
}

.reveal-from-left.active-left {
  opacity: 1;
  transform: translateX(0);
}

.reveal-from-right {
  opacity: 1;
  transform: translateX(500px); /* start right */
  /* transform: translateY(40px); */ /* start from bottom */ /*
  transition: all 0.6s ease;
}

.reveal-from-right.active-right {
  opacity: 1;
  transform: translateX(0);
} */

.avatar {
  width: 170px;
}

.centered-row {
  margin: 0;
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 1em;
}

.button-row {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  gap: 0.3em;
}

.column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 0.2em;
}

.two-column {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 0.2em;
}

.headline-desc-area {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.headline {
  font-size: 30px;
  font-weight: bold;
  color: white;
  text-align: center;
}

.photo-button {
  width: 45px;
  height: 45px;
  border-radius: 50%;
  border: none;
  padding: 2.5px;
}

.icon-40px {
  width: 40px;
  height: 40px;
}

.desc {
  font-size: 18px;
  color: white;
}

.long-desc {
  margin-top: 35px;
  font-size: 15px;
  color: white;
}


.topic-page-title {
  margin: 40px 0 10px 0;
  color: var(--dark-blue);
}

.topic-page-directions {
  text-align: center;
  color: var(--dark-blue);
}


.repeat-horiz-background {
  background-repeat: repeat-x;
  background-position: bottom; 
  margin: 0px;
  padding: 0;
}

.repeat-horiz-background-small {
  background-size: 250px;
  height: 45px; 
}

.repeat-horiz-background-large {
  background-size: 650px;
  height: 150px; 
}

.repeat-horiz-background-large-sand-top {
  background-size: 650px;
  height: 150px;
  background-color: var(--sand);
}

.repeat-horiz-background-sand {
  height: 170px; 
}

.breadcrumbs {
  margin: 10px 0 0 20px;
  font-size: 12px;
}

.featured-projects-section {
  background-color: white;
  margin: 0;
  color: var(--dark-blue);
  margin: 20px;
  width: calc(100% - 40px);
  max-width: calc(100vw - 40px);
  overflow: hidden;
}


.project-card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 30px;
  padding: 10px;
}

.project-card {
  min-height: 280px;
  width: 240px;
  min-width: 240px;
  border-radius: 5px;
  padding: 0;
  text-decoration: none;
  flex: 0 0 auto;
  text-align: center;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  display: flex;
  flex-direction: column;
  border: 1px solid var(--dark-blue);
  box-shadow: -2px 2px 5px var(--dark-blue);
  /* margin: 8px; PROBLEM for nuka-carousel on small screens */

}

.project-card-contents {
  padding: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 100%;
}

.nuka-container {
  margin-left: auto;
  margin-right: auto;
}

.nuka-page-indicator {
  border: 1px solid var(--dark-blue) !important;
  background-color: white !important;
  height: 16px !important;
  width: 15px !important;
  margin-right: 10px !important;
  box-shadow: -2px 2px 5px var(--dark-blue);
}

.nuka-page-indicator-active {
  background-color: var(--dark-blue) !important;
}

.nuka-wrapper {
  padding: 20px 10px;
  gap: 20px;
  /* gap: 20px; PROBLEM for nuka-carousel on small screens */
}


/* optional animation that makes cards larger when hovered */

.project-card:hover {
  transform: scale(1.05);
  z-index: 2;
}


/* optional animation to change color on hover that interferes with onload
.project-card-click-me::before {
  content: "";
  position: absolute;
  top: 0;
  left: -100%;
  width: 100%;
  height: 100%;
  background: orange;<div class="nuka-slide-container">…</div>
  transition: left 0.3s ease;
}

.project-card-click-me:hover::before {
  left: 0;
} 

.project-card:hover .project-card-click-me::before {
  animation: none; 
  transform: translateX(0);
}
*/

.project-card:hover .project-card-click-me {
  background-color: orange;
}

.project-card-click-me {
  margin-top: auto;
  position: relative;
  /*background-color: var(--dark-blue);
  color: white;*/
  color: var(--dark-blue);
  padding: 10px;
  overflow: hidden;
  z-index: 0;
  border-radius: 0 0 5px 5px;
}
/* ... */

